[tool.poetry]
name = "ical-transparentifier"
version = "0.1.0"
description = "Proxy that modifies events in a webcal and makes them transparent"
authors = ["Tom Whitwell <tom@whi.tw>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
uvicorn = "^0.14.0"
fastapi = "^0.66.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
